# taskapp

./: .gitignore  README.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/domain/: entities.py
backend/insfrastructure/: db.py  stores.py
backend/presentation/routes/: tasks_route.py
frontend/: env.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/features/tasks/: definitions.ts
frontend/features/tasks/ui/: task-card.tsx
frontend/shared/iu/: Navbar.tsx
frontend/utils/: api-client.ts
